partman-base (77) UNRELEASED; urgency=low

  [ Colin Watson ]
  * The new update-dev that handles udev has been around for a while, so
    drop old calls to udevstart/udevsynthesize.
  * Use log-output when calling update-dev.

  [ Martin Michlmayr ]
  * Add a definition for mipsel/bcm947xx (msdos).

 -- Colin Watson <cjwatson@debian.org>  Sat, 24 Dec 2005 16:37:04 +0000

partman-base (76) unstable; urgency=low

  * Unhardcode path to update-dev to allow a smoother transition to a
    generic /bin/update-dev that handles udev too.

  [ Updated translations ]
  * Malagasy (mg.po) by Jaonary Rabarisoa
  * Romanian (ro.po) by Eddy Petrişor
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Peter Mann

 -- Colin Watson <cjwatson@debian.org>  Wed, 30 Nov 2005 21:06:32 +0000

partman-base (75) unstable; urgency=low

  [ Colin Watson ]
  * Clarify partman/confirm to indicate that if you say no you can make
    further changes manually (closes: #329405).
  * Exclude CD/DVD drives from the output of parted_devices.
  * If udevstart is missing, try udevsynthesize instead to try to get udev
    to create pending device nodes.

  [ Sven Luther ]
  * Adapted to chrp_rs6k -> chrp_ibm transition.

  [ Updated translations ]
  * Bulgarian (bg.po) by Ognyan Kulev
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul
  * German (de.po) by Jens Seidel
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Icelandic (is.po) by David Steinn Geirsson
  * Italian (it.po) by Giuseppe Sacco
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Sunjae park
  * Bokmål, Norwegian (nb.po) by Bjørn Steensrud
  * Dutch (nl.po) by Bart Cornelis
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (pt.po) by Miguel Figueiredo
  * Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
  * Russian (ru.po) by Yuri Kozlov
  * Swedish (sv.po) by Daniel Nylander