@@ -7,6 +7,7 @@ partman-base (77) UNRELEASED; urgency=low
 
   [ Martin Michlmayr ]
   * Add a definition for mipsel/bcm947xx (msdos).
+  * Add a definition for arm/nslu2 and armeb/nslu2 (msdos).
 
  -- Colin Watson <cjwatson@debian.org>  Sat, 24 Dec 2005 16:37:04 +0000
 
